--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ arch:
 language: cpp
 compiler: clang
 sudo: require
-dist: trusty
+dist: xenial
 before_install:
 - sudo add-apt-repository ppa:beineri/opt-qt591-trusty -y
 - sudo apt-get update -qq
